modification on about page on mobile, fix the margin top

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -63,7 +63,7 @@
 @media screen and (max-width: 800px) {
   #about {
 
-    margin-top: 6rem;
+    margin-top: 8rem;
 
     .photo-profil {
       width: 9rem;
@@ -82,7 +82,7 @@
     }
 
     .about-content {
-      margin-top: 3rem;
+      margin-top: 2rem;
       padding: 1rem;
 
       h3 {
